[FIX] primeras hus rechazadas en demo 02

--- a/src/OMD/OMDApp/templates/turns/turn_list.html
+++ b/src/OMD/OMDApp/templates/turns/turn_list.html
@@ -24,7 +24,35 @@
                 <div class="d-grid gap-2 d-md-flex justify-content-lg-center justify-content-center mt-3">
                   {% if turns == "P" %}
                     <a href="{% url 'acceptTurn' turn_id=turn.id %}" class="btn btn-primary-custom">Aceptar</a>
-                    <a href="{% url 'rejectTurn' turn_id=turn.id %}" class="btn btn-secondary">Rechazar</a>
+                    <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#rejectModal-{{turn.id}}" data-bs-whatever="@getbootstrap">
+                      Rechazar
+                    </button>
+
+                    <!--Modal-->
+                    <div class="modal fade" id="rejectModal-{{turn.id}}" data-bs-backdrop="static" bindex="-1" aria-hidden="true">
+                      <div class="modal-dialog">
+                        <div class="modal-content">
+                          <div class="modal-header">
+                            <h1 class="modal-title fs-5" id="exampleModalLabel">Confirmación de rechazo</h1>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                          </div>
+                          <div class="modal-body">
+                            <form method="POST" action="{% url 'rejectTurn' turn_id=turn.id %}">
+                              {% csrf_token %}
+                              <div class="mb-3">
+                                <label for="message-text" class="col-form-label">Motivo:</label>
+                                <textarea class="form-control" id="message-text" name="motive"></textarea>
+                              </div>
+                              <div class="float-end">
+                                <button type="button" class="btn btn-primary-custom" data-bs-dismiss="modal">Cancelar</button>
+                                <button type="submit" class="btn btn-secondary">Rechazar</button>
+                              </div>
+                            </form>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+
                   {% elif turns == "A" and turn.date|date:'d/m/Y' == todays_date|date:'d/m/Y' %}
                     <a href="{% url 'attendTurnView' turn_id=turn.id %}" class="btn btn-primary-custom">Atender</a>
                   {% elif turns == "U" %}
