--- a/src/OMD/OMDApp/templates/form_iterator.html
+++ b/src/OMD/OMDApp/templates/form_iterator.html
@@ -18,7 +18,7 @@
                     </div>
                 {% endfor %}
             </div>
-        {% else %}
+        {% else %} <!--Generic field like text-->
             <input type="{{ field.field.widget.input_type }}" class="form-control {% if field.errors %}is-invalid{% endif %}" id="{{ field.id_for_label }}"
                 name="{{ field.html_name }}" placeholder="{{ field.field.widget.attrs.placeholder }}"
                 {% if field.value %} value="{{ field.value }}" {% endif %}>
