--- a/src/OMD/OMDApp/templates/navbar.html
+++ b/src/OMD/OMDApp/templates/navbar.html
@@ -33,8 +33,8 @@
               Servicios
             </a>
             <ul class="dropdown-menu dropdown-menu-end">
-                <li><a class="dropdown-item" href="/">Paseadores</a></li>
-                <li><a class="dropdown-item" href="/">Cuidadores</a></li>
+                <li><a class="dropdown-item" href="{% url 'viewPaseadores' %}">Paseadores</a></li>
+                <li><a class="dropdown-item" href="{% url 'viewCuidadores' %}">Cuidadores</a></li>
             </ul>
           </li>
 
